[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "toku"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = "^1.10.2"
python = "^3.10"
python-dotenv = "^0.21.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.1"
mypy = "^0.991"
pre-commit = "^2.20.0"
types-requests = "^2.28.11.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
ensure_newline_before_comments = true
filter_files = true
force_single_line = true
group_by_package = true
import_heading_stdlib = "standard library"
import_heading_thirdparty = "others libraries"
import_heading_typing = "typing"
known_typing = "typing"
lines_between_types = 1
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "TYPING"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
plugins = "pydantic.mypy"
warn_return_any = true
